src/styles/index.scss
@import 'reset';
@import 'variables';
@import 'mixins';

* {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  background-color: white;
  color: $font-brown;
  /*padding: $vertical-padding / 2; */
  margin: 0 auto;
  font-family: $text-font;
  font-size: 20px;
  line-height: 1.5;
  @include MQ(S) {
    font-size: 18px;
  }
}

.container {
  margin: 0 auto;
  max-width: $XL;
  background-color: $background-color;
  @include MQ(S) {
    width: 100%;
  }
}

#background_wrapper {
  min-height: 100%;
}

header {
  padding-bottom: $vertical-padding;
}

.scroll-indicator {
  z-index: 2;
  visibility: hidden;
  position: absolute;
  top: 95%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 0;
  opacity: 0.8;
  animation: showIntro 1.5s ease-in 6s forwards;
  @include MQ(S) {
    top: 98%; 
    }
  @include MQ(XS) {
    
  }
}

.scroll-text {
  left: -20px;
  top: -45px;
  position: absolute;
  font-weight: bold;
  font-size: 14px;
}

.scroll-indicator-inner {
  position: absolute;
  cursor: pointer;
  top: 0;
  animation: animate 2s;
  animation-iteration-count: 10;
}

.scroll-indicator-inner:before {
    content: '';
    position: absolute;
    bottom: 0;
    left: -15px;
    width: 30px;
    height: 30px;
    border-bottom: 5px solid $font-brown;
    border-right: 5px solid $font-brown;
    transform: rotate(45deg);
    @include MQ(S) {
    left: -1px;
    width: 20px;
    height: 20px;
      
    }
}

@keyframes animate {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(7.5px);
  }
  100% {
    transform: translateY(0);

  }
}

.intro {
  opacity: 1;
  display: block;
  color: $font-brown;
  visibility: hidden;
  position: absolute;
  margin-top: 15vh;
  margin-left: 5vw;
  width: 40vw;               
  animation: showIntro 1.5s ease-in 6s forwards;
  @include MQ(S) {
    text-align: center;
    margin-left: 0;
    margin-top: 75vh;
    width: 100%;
    padding: $vertical-padding;
  }
  @include MQ(XS) {
    margin-top: 480px;

  }
  & h1 {
    font-family: $big-font;
    text-transform: uppercase;
    font-size: 76px;
    font-weight: 700;
    margin-bottom: 10px;
    line-height: 1;
    @include MQ(S) {
    font-size: 38px;
  }
  }
  & h2 {
    font-family: $byline-font;
    font-size: 36px;
    line-height: 1.2;
    margin-bottom: 10px;
    font-weight: 500;
    @include MQ(S) {
    font-size: 24px;
  }
  }
  & .author {
    font-family: $text-font;
    font-size: 18px;
    font-weight: 400;
    & span {
      font-weight: 700;
    }
    @include MQ(S) {
    display: none;
  }
  }
}

.content {
  padding: $vertical-padding;
  max-width: $M;
  margin: 0 auto;
}

.byline {
  padding-top: $vertical-padding;
  padding-bottom: 2 * $vertical-padding;
  /*text-transform: uppercase;*/
  color: $primary-color;
  font-weight: 700;
}

h3 {
  padding-top: $vertical-padding * 2;
  font-family: $title-font;
  font-size: 30px;
  font-weight: 400;
  @include MQ(S) {
    margin-top: $vertical-padding;
    font-size: 20px;
  }
}

hr {
  display: block;
  border: 0;
  border-top: 1px solid $font-brown;
  margin: 1em 0;
  padding: 0;
  background: $font-brown;
  height: 1px;
  width: 150px;
  border-radius: 1px;
}

h4 {
  font-size: 36px;
  font-family: $byline-font;
  margin-bottom: $vertical-padding * 2;
  font-weight: 500;
  @include MQ(S) {
    font-size: 24px;
  }
}

p {
  margin-bottom: $vertical-padding;
  clear: both;
}

.chart-container {
  margin-left: -15%;
  width: 130%;
  float: left;
  @include MQ(L) {
    margin-left: 0;
    width: 100%;
  }
}

.wrapper {
  float: left;
  padding-right: $vertical-padding;
}

@keyframes showIntro {
    0% {opacity: 0; visibility: hidden;}
    
    100% {opacity:100%; visibility: visible;}
}

.large-chart {
  width: 100%;
}

.medium-chart {
  width: 50%;
  @include MQ(M) {
    width: 100%;
  }
}

.small-chart {
  width: 33%;
  @include MQ(M) {
    width: 100%;
  }
}

.axis--x path {
  display: none;
}

.axis--y path {
  stroke: $light-brown;
}

.axis--y line {
  stroke: $light-brown;
}

.axis--y .tick text {
  font-family: $text-font;
  fill: $dark-brown;
  font-size: 10px;
  alignment-baseline: text-after-edge;
  /*@include MQ(S) {
    font-size: 12px;
  }*/
}

.axis--x text {
  font-size: 13px;
  font-family: $text-font;
  fill: $dark-brown;
  @include MQ(S) {
    font-size: 12px;
  }
}

.bar-value {
  font-size: 13px;
  font-family: $text-font;
  fill: $dark-brown;
  font-weight: 700;
  @include MQ(S) {
    font-size: 10px;
  }
}

.chart-title text {
  font-size: 16px;
  font-weight: 700;
}

.stations-text {
  cursor: pointer;
  fill: $font-brown;
  font-size: 16px;
  @include MQ(S) {
    font-size: 14px;
  }
}

#indicator_arrow {
  visibility: hidden;
  animation: showIntro 1.5s ease-in 6s forwards;
  & text {
  fill: $light-brown;
  font-size: 14px;
  font-weight: 700;
}
}

.station {
  cursor: pointer;
}

.sidebar {
  visibility: hidden;
  transform: translateX(-100%);
  transition: 1.5s;
  transition-timing-function: ease-in-out;
  z-index: 1;
  background-color: #A0BEC9;
  color: $font-brown;
  position: absolute;
  margin-top: 0;
  margin-left: 0;
  width: 500px;
  transition: 0.5s;
  padding: $vertical-padding $vertical-padding * 2;
  padding-bottom: 0;
  & h1 {
    font-weight: 700;
    text-transform: uppercase;
    font-family: $big-font;
    font-size: 30px;
    margin-bottom: $vertical-padding;
    @include MQ(S) {
      font-size: 20px;
    }
  }
  @include MQ(S) {
    height: 100%;
    width: 100%;
    padding: $vertical-padding;
  }

}

.move-in {
    visibility: visible;
    transform: translateX(0);
}

.close {
  opacity: 0;
  font-size: 35px;
  font-weight: 700;
  position: absolute;
  left: 440px;
  cursor: pointer;
  top: 15px;
  @include MQ(S) {
    left: 89%;
    top: 10px;
  }
}

.sidebar-intro {
  font-size: 18px;
}

.poster {
  margin-bottom: $vertical-padding;
  &-container {
    padding: $vertical-padding 0;
  }
  &-icon {
    clear: both;
    float: left;
    padding-right: $vertical-padding;
  }
  &-label {
    font-family: $byline-font;
    font-weight: 500;
    font-size: 24px;
    padding-top: 5px;
     @include MQ(S) {
      font-size: 18px;
    }
  }
}

.mobile {
  display: none; 
  @include MQ(S) {
    display: block;
  }
}

.desktop {
  display: block; 
  @include MQ(S) {
    display: none;
  }
}

/*#A0BEC9*/

